style.css
:root {
  --primary-color: #659365;
  --secondary-color: #073340;
  --font-size-medium: 1.125rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 100%;
}

body {
  font-family: sans-serif;
}

.overflow-hidden {
  overflow: hidden;
}

header {
  display: flex;
  flex-direction: column;
  background: linear-gradient(
    to right,
    var(--primary-color),
    var(--secondary-color)
  );
  min-height: 100vh;
  padding: 0 25px;
  align-items: center;
}

header button {
  cursor: pointer;
}

nav {
  position: relative;
  display: flex;
  padding-top: 60px;
  justify-content: space-between;
  align-items: start;
  color: #fff;
  max-width: 1200px;
  width: 100%;
}

.logo {
  font-size: 1.5rem;
}

.nav-links {
  display: none;
}

.btn-contact {
  width: 100px;
  font-size: 13px;
  font-weight: 600;
  background-color: #b9f2a1;
  padding: 10px 15px;
  border-radius: 10px;
  border: none;
  outline: none;
}

@media screen and (max-width: 900px) {
  .nav-links {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    list-style: none;
    gap: 32px;
    width: 100%;
    position: fixed;
    left: -100%;
    top: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(
      to right,
      var(--primary-color),
      var(--secondary-color)
    );
    transition: 0.5s;
  }

  .transformed {
    left: 0;
  }

  .nav-links li {
    width: 100%;
    max-width: 200px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #073340;
    border-radius: 10px;
  }

  .nav-links li a {
    text-decoration: none;
    color: #fff;
  }
}

.ham-icon {
  z-index: 10;
  cursor: pointer;
}

@media screen and (min-width: 900px) {
  .nav-links {
    display: flex;
    list-style-type: none;
    gap: 24px;
  }

  .nav-links li a {
    text-decoration: none;
    color: #fff;
    font-weight: 500;
    font-size: var(--font-size-medium);
  }

  .nav-links li a:hover {
    color: #b9f2a1;
  }

  .ham-icon {
    display: none;
  }
}

.hero {
  color: #fff;
  padding-top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  width: 100%;
  max-width: 1200px;
  justify-content: space-between;
}

.introduction-text {
  text-align: center;
}

.introduction-text h1 {
  font-size: 2.2rem;
}

.introduction-text p {
  padding-top: 30px;
  font-size: 0.875rem;
  font-weight: 500;
}

.text-green-light {
  color: #b9f2a1;
}

.marketing-image {
  padding-top: 30px;
}

.hero-buttons {
  display: flex;
  flex-direction: column;
  padding-top: 30px;
  padding-bottom: 30px;
  align-items: center;
  gap: 15px;
}

.hero-buttons button {
  width: 200px;
  padding: 15px 40px;
  border-radius: 10px;
  outline: none;
  border: none;
  font-weight: 600;
}

.hero-buttons .get-started {
  background-color: #b9f2a1;
}

.hero-buttons .explore-more {
  border: 2px solid #b9f2a1;
  background-color: transparent;
  color: #fff;
}

@media screen and (min-width: 1000px) {
  .hero {
    flex-direction: row;
  }

  .hero .introduction-text {
    text-align: left;
  }

  .hero-buttons {
    align-items: start;
  }

  .introduction-text h1 {
    font-size: 3rem;
    max-width: 600px;
  }
}

.testimonials {
  margin: 0 auto;
  padding: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  width: 100%;
  max-width: 1200px;
  justify-content: space-between;
}

.section-text {
  text-align: center;
  padding-bottom: 30px;
}

.section-text h2 {
  font-size: 2.2rem;
  padding-bottom: 10px;
}

.clients {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
  gap: 80px;
}

.video-presentation {
  background-color: rgb(185, 242, 161, 0.4);
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.video-presentation > div {
  display: grid;
  place-items: center;
  max-width: 1200px;
  padding: 40px;
  gap: 40px;
}

.video-presentation div h2 {
  font-size: 2rem;
}

.video {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.video img:first-child {
  width: 100%;
}

.video img:last-child {
  position: absolute;
  cursor: pointer;
}

.video-presentation div button.btn-contact {
  width: 100%;
  max-width: 200px;
}

.video-text {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.video img:first-child {
  border-radius: 10px;
}

@media screen and (min-width: 850px) {
  .video-text {
    text-align: left;
  }
  .video-presentation > div {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr;
    justify-items: stretch;
    align-items: center;
  }

  .video {
    grid-row: 1/3;
    grid-column: 2/3;
  }
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  gap: 20px;
  text-align: center;
  max-width: 300px;
  height: 500px;
  border-radius: 10px;
  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.3);
  padding: 10px;
  margin: 5px;
  transition: 0.5s;
}

.card-text {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.card-text h3 {
  font-size: 1.8rem;
}

.card-text p {
  font-size: 1.2rem;
  color: #5d5a5a;
}

.card-link {
  margin-top: auto;
  text-decoration: none;
  display: flex;
  align-items: center;
  gap: 10px;
  font-weight: 600;
  font-size: 0.875rem;
  color: #5d5a5a;
}

.services {
  margin: 0 auto;
  max-width: 1200px;
  padding: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 40px;
  flex-direction: column;
}

.cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 40px;
}

.card > img {
  height: 180px;
}

.cards .card:hover {
  box-shadow: 0 0 1px 5px rgba(10, 51, 90, 0.3);
  transform: scale(1.02);
}

.plans {
  background-color: #B9F2A1;
  padding: 80px;
}

.plan-card {
  display: flex;
  flex-direction: column;
  width: 300px;
  height: 530px;
  align-items: center;
  justify-content: space-around;
  background-color: white;
  border-radius: 15px;
  padding: 20px 40px;
  box-shadow: 0px 0px 1px 3px #659365;
}


.plan-card-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.plan-card-header h3 {
  font-size: 2rem;
  font-weight: 500;
}

.plan-card-header p {
  font-weight: 600;
  font-size: 1.7rem;
}

.plan-card-header p span {
  font-size: 1.1rem;
  font-weight: 500;
  color: #999;
}

.features {
  width: 100%;
}

.features ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;

}

.features ul li {
  width: 100%;
  text-align: center;
  position: relative;
}

.features ul li::before {
  content: url('./img/check-img.png');
  position: absolute;
  left: 40px;
}

.plans button {
  width: 100%;
  max-width: 190px;
  height: 60px;
  border-radius: 10px;
  border: 0;
  outline: 0;
  background-color: #B9F2A1;
  font-weight: bold;
  font-size: 1.1rem;
  cursor: pointer;
}

